# E-WheelChAIr

./: .gitignore  BUILD_AND_RUN.md  CABLAGE_SCHEMA.md  INSTALLATION_GUIDE.md  LAUNCH_FILES_GUIDE.md  README.md  TESTING_GUIDE.md  check_ros_packages.py  parametrage_raspberry_hotspot.txt  requirements.txt  test_python_architecture.py  test_simple.py
.history/: README_20251103120215.md  README_20251103120221.md  README_20251103120224.md  README_20251103120227.md  README_20251103120236.md  README_20251103120242.md  README_20251103120247.md  README_20251103120259.md  README_20251103120300.md  README_20251103120310.md  README_20251103120311.md  README_20251103120331.md  README_20251103120332.md  README_20251103120334.md  README_20251103120335.md  README_20251103120339.md  README_20251103120353.md  README_20251103120354.md  README_20251103120356.md  README_20251103120401.md  README_20251103120407.md  README_20251103120411.md  README_20251103120417.md  README_20251103120420.md  README_20251103120425.md  README_20251103120454.md  README_20251103120546.md  README_20251103120602.md  README_20251103120604.md  README_20251103120617.md  README_20251103120618.md  README_20251103120626.md  README_20251103120655.md  README_20251103120656.md  README_20251103120659.md  README_20251103120700.md  README_20251103120702.md  README_20251103120705.md  README_20251103120709.md  README_20251103120711.md  (+38 more)
.history/src/arduino_interface/: setup_20251030153951.py  setup_20251030153952.py  setup_20251030153959.py  setup_20251030154003.py  setup_20251030154017.py  setup_20251030154027.py  setup_20251030154033.py  (+2 more)
3d_models/Joystick_mount/: Joystick _for_wheelchair.iges
EWheelChAIr_ws/: README.md
EWheelChAIr_ws/install/: local_setup.sh  setup.sh
EWheelChAIr_ws/log/: latest_build
arduino_sensors/joystick/: package.xml  setup.cfg  setup.py
arduino_sensors/ultrasonic/: setup.cfg  setup.py
hardware/Image_processing/: ROS.txt  cmd.txt  verify.py
hardware/arduino/: ARDUINO_GUIDE.md  FILES_SUMMARY.md  README.md  ewheelchair_controller.ino  test_arduino.py
image_processing/config/: camera_info.yaml  depth_camera_params.yaml  wide_camera_params.yaml
image_processing/launch/: wide_cameras.launch.py
image_processing/src/depth_processing/: package.xml  setup.cfg  setup.py
image_processing/src/wide_processing/: package.xml  setup.cfg  setup.py
image_processing/src/yolo_detector/: package.xml  setup.py
image_processing/src/yolo_detector/yolo_detector/: yolo_node.py
install/: local_setup.sh  setup.sh
log/: latest_build
raspberry_pi_master/src/custom_msgs/: CMakeLists.txt  package.xml
raspberry_pi_master/src/custom_msgs/msg/: ArduinoData.msg  EmergencyData.msg  ObstacleDetection.msg  UltrasonicArray.msg  YoloResults.msg
raspberry_pi_master/src/master_node/: CMakeLists.txt  package.xml  setup.py
raspberry_pi_master/src/master_node/include/master_node/: masterNode.hh
raspberry_pi_master/src/master_node/src/: masterNode.cpp
raspberry_pi_master/src/motor_speed_calculator/: CMakeLists.txt  package.xml
raspberry_pi_master/src/sabertooth_controller/: CMakeLists.txt  package.xml
raspberry_pi_master/src/sabertooth_controller/include/sabertooth_controller/: sabertooth_controller.hpp
raspberry_pi_master/src/sabertooth_controller/src/: sabertooth_controller.cpp
raspberry_pi_master/src/visualization/: package.xml  setup.py
src/arduino_bridge/: package.xml  setup.py
src/arduino_data_receiver/: package.xml  setup.cfg  setup.py
src/arduino_data_receiver/arduino_data_receiver/: arduino_data_receiver_node.py
src/custom_msgs/: CMakeLists.txt  package.xml
src/custom_msgs/msg/: ControlCommand.msg  DetectedObject.msg  DetectedObjectArray.msg  EmergencyData.msg  Joystick.msg  ObstacleDetection.msg  ServoCommand.msg  UltrasonicArray.msg  VisionObstacle.msg  WyesIntent.msg
src/custom_msgs_py/: package.xml  setup.py
src/custom_msgs_py/custom_msgs_py/: __init__.py  emergency_data_msg.py  joystick_msg.py  obstacle_detection_msg.py  ultrasonic_array_msg.py
src/depth_processing/: package.xml  setup.py
src/e_wheelchair_launch/: CMakeLists.txt  package.xml  setup.cfg  setup.py
src/e_wheelchair_launch/e_wheelchair_launch/launch/: ewheelchair_all.launch.py  ewheelchair_arduino_vision.launch.py  ewheelchair_joystick_servo.launch.py  ewheelchair_python.launch.py  ewheelchair_wyes_teleop.launch.py  wide_camera.launch.py
src/e_wheelchair_launch/launch/: ewheelchair_all.launch.py
src/image_processing/src/depth_camera_driver/: package.xml  setup.py
src/launch/: system_launch.py
src/lidar/: package.xml  setup.py
src/lidar/resource/: config.yaml
src/master_node/: CMakeLists.txt  package.xml  setup.py
src/master_node/config/: master_config.yaml  servo_config.yaml
src/master_node/master_node/: master_node.py  master_node_bis.py
src/motor_speed_calculator/: setup.py
src/pc_vision_bridge/: package.xml  setup.cfg  setup.py
src/sabertooth_controller/: CMakeLists.txt  package.xml
src/sabertooth_controller_py/: package.xml  setup.py
src/servo_controller/: CMakeLists.txt  package.xml  setup.py
src/servo_controller/config/: servo_config.yaml
src/servo_controller/launch/: servo_controller.launch.py
src/servo_controller/resource/: servo_controller
src/servo_controller/servo_controller/: __init__.py  servo_controller_node.py
src/teleop_joystick/: CMakeLists.txt  TELEOP_GUIDE.md  package.xml  setup.py
src/teleop_joystick/config/: joystick_config.yaml
src/teleop_joystick/launch/: README.md  USAGE.md  teleop_joystick.launch.py  teleop_minimal.launch.py  test_teleop_launch.py
src/teleop_joystick/resource/: teleop_joystick
src/teleop_joystick/teleop_joystick/: __init__.py  teleop_joystick_node.py
src/visualization/: CMakeLists.txt
src/visualization/visualization/: real_time_plot.py
src/wide_processing/: CMakeLists.txt  package.xml  setup.cfg  setup.py
src/wyes_teleop/: package.xml  setup.cfg  setup.py
src/wyes_teleop/wyes_teleop/: wyes_teleop_node.py
utils/motor_speed_calculator/: CMakeLists.txt  package.xml
utils/real_time_plot/: package.xml
(+142 files in other folders)
