<?xml version="1.0"?>
<package format="3">
  <name>custom_msgs</name>
  <version>0.1.0</version>
  <description>Messages personnalisés pour E-WheelChAIr</description>
  <maintainer email="renaud.janet@proton.me">Renaud JANET</maintainer>
  <license>Apache 2.0</license>

  <!-- Dependencies for constructing messages -->
  <buildtool_depend>ament_cmake</buildtool_depend>
  <build_depend>rosidl_default_generator</build_depend>
  <build_depend>rosidl_default_runtime</build_depend>


  <!-- Dependencies for execution -->
  <exec_depend>rosidl_default_runtime</exec_depend>
  <exec_depend>rclcpp</exec_depend>
  <exec_depend>std_msgs</exec_depend>

  <!-- Groups for ROS2 interfaces-->
  <member_of_group>rosidl_interface_packages</member_of_group>

  <export>
    <build_type>ament_cmake</build_type>
  </export>

</package>