<?xml version="1.0"?>
<package format="3">
  <name>custom_msgs_py</name>
  <version>0.1.0</version>
  <description>Python interface for E-WheelChAIr custom messages</description>

  <maintainer email="renaud.janet@proton.me">Renaud Janet</maintainer>
  <license>Apache License 2.0</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <depend>rclpy</depend>
  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>sensor_msgs</depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>