<?xml version="1.0"?>
<package format="3">
  <name>e_wheelchair_launch</name>
  <version>0.1.0</version>
  <description>Launch file for all E-WheelChAIr nodes</description>
  <maintainer email="renaud.janet@proton.me">Renaud JANET</maintainer>
  <license>Apache 2.0</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <depend>rclpy</depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
