<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>e_wheelchair_launch</name>
  <version>0.1.0</version>
  <description>
    Launch files for E-WheelChAIr project.
    Provides launch configurations for the complete system.
  </description>
  
  <maintainer email="renaud.janet@etu.sorbonne-universite.fr">Renaud JANET</maintainer>
  <license>Apache License 2.0</license>

  <buildtool_depend>ament_python</buildtool_depend>
  
  <depend>launch</depend>
  <depend>launch_ros</depend>
  <depend>arduino_bridge</depend>
  <depend>master_node</depend>
  <depend>wyes_teleop</depend>
  <depend>pc_vision_bridge</depend>
  
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>
  
  <export>
    <build_type>ament_python</build_type>
  </export>
</package>