<?xml version="1.0"?>
<package format="3">
  <name>lidar</name>
  <version>0.1.0</version>
  <description>Package ROS2 pour le LIDAR du Rosmaster X3</description>
  <maintainer email="renaud.janet@proton.me">Renaud JANET</maintainer>
  <license>Apache 2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <depend>rclpy</depend>
  <depend>sllidar_ros2</depend>  <!-- ou ldlidar_stl_ros2 selon le modèle -->

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
