<?xml version="1.0"?>
<package format="3">
  <name>master_node</name>
  <version>0.1.0</version>
  <description>Central ROS2 node for E-WheelChAIr to merge all sensor data and control motors</description>

  <maintainer email="renaud.janet@etu.sorbonne-universite.fr">Renaud Janet</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <depend>rclpy</depend>
  <depend>geometry_msgs</depend>
  <depend>custom_msgs</depend>
  <depend>pyserial</depend>
  <depend>PyYAML</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
