<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>teleop_joystick</name>
  <version>0.1.0</version>
  <description>
    Teleop Joystick Node for E-WheelChAIr project.
    Reads data from Arduino joystick and publishes ROS messages.
  </description>
  
  <maintainer email="renaud.janet@etu.sorbonne-universite.fr">Renaud JANET</maintainer>
  <license>Apache License 2.0</license>
  
  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>ament_python</buildtool_depend>
  
  <depend>rclpy</depend>
  <depend>custom_msgs</depend>
  <depend>python3-pyserial</depend>
  <depend>python3-yaml</depend>
  
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>
  
  <export>
    <build_type>ament_python</build_type>
  </export>
</package>