<?xml version="1.0"?>
<package format="3">
  <name>depth_processing</name>
  <version>0.1.0</version>
  <description>Traitement des images de la depth camera</description>
  <maintainer email="renaud.janet@proton.me">Renaud JANET</maintainer>
  <license>Apache 2.0</license>
  <buildtool_depend>ament_cmake</buildtool_depend>
  <depend>rclpy</depend>
  <depend>sensor_msgs</depend>
  <depend>custom_msgs</depend>
  <depend>cv_bridge</depend>
  <export>
    <build_type>ament_python</build_type>
  </export>
</package>