<?xml version="1.0"?>
<package format="3">
  <name>yolo_detector</name>
  <version>0.1.0</version>
  <description>Détection d'objets avec YOLO</description>
  <maintainer email="renaud.janet@proton.me">Renaud JANET</maintainer>
  <license>Apache 2.0</license>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>cv_bridge</exec_depend>
  
