<?xml version="1.0"?>
<package format="3">
  <name>custom_msgs</name>
  <version>0.1.0</version>
  <description>Messages personnalisés pour E-WheelChAIr</description>
  <maintainer email="renaud.janet@proton.me">Renaud JANET</maintainer>
  <license>Apache 2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <depend>rosidl_default_runtime</depend>
  <member_of_group>rosidl_interface_packages</member_of_group>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
<?xml version="1.0"?>
<package format="3">
  <name>custom_msgs</name>
  <version>0.1.0</version>
  <description>Messages personnalisés pour E-WheelChAIr</description>
  <maintainer email="renaud.janet@proton.me">Renaud JANET</maintainer>
  <license>Apache 2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <depend>rosidl_default_runtime</depend>
  <member_of_group>rosidl_interface_packages</member_of_group>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
