<?xml version="1.0"?>
<package format="3">
  <name>visualization</name>
  <version>0.1.0</version>
  <description>Real-time plotting node for E-WheelChAIr</description>
  <maintainer email="renaud.janet@proton.me">Renaud JANET</maintainer>
  <license>Apache 2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <depend>rclpy</depend>
  <depend>std_msgs</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
